k8s/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: node-service

spec:
  selector:
    app: node-app
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
